<resources>
    <string name="app_name">EducraftAdmin</string>
    <string name="login_email_text">이메일</string>
    <string name="login_password_text">비밀번호</string>
    <string name="login_email_hint">이메일을 입력하세요.</string>
    <string name="login_password_hint">비밀번호를 입력하세요.</string>
    <string name="login_button_text">로그인</string>
    <string name="login_signup_textbutton">아직 계정이 없으신가요?</string>
    <string name="usage_agree_content">
제1조	(목적)\n
본 약관은 주식회사 아이티스노우볼(이하 ‘회사’라 합니다)가 무선통신망 등을 이용하여 제공하는 모바일 컨텐츠 어플리케이션 및 이에 부수된 제반 서비스’(이하 ‘컨텐츠서비스’라 합니다)와 관련하여 회사와 회원간의 권리, 의무 및 기타 필요한 사항을 규정함을 그 목적으로 합니다.\n
\n
제2조	(정의)\n
본 약관에서 사용하는 용어의 정의는 다음과 같습니다.\n
①	‘회원’이라 함은 회사의 컨텐츠서비스에 접속하여 본 약관에 따라 회사와 이용계약을 체결하고 회사가 제공하는 컨텐츠서비스를 이용하는 고객을 말합니다.\n
②	‘계정’이라 함은 회원의 식별과 서비스 이용을 위하여 회원이 정하고 회사가 승인하는 문자와 숫자의 조합을 의미합니다..\n
③	‘비밀번호’라 함은 회원이 부여 받은 계정과 일치되는 회원임을 확인하고, 회원 개인의 정보보호를 위해 자신이 정한 문자 또는 숫자의 조합을 의미합니다.\n
④	‘유료서비스’라 함은 회사가 유료로 제공하는 각종 디지털콘텐츠(캐쉬, 아이템, 기타 유료콘텐츠를 포함) 및 제반 서비스를 의미합니다.\n
⑤	‘포인트’라 함은 회사가 임의로 책정 또는 지급, 조정, 회수 할 수 있는 환가성 및 재산적 가치가 없는 서비스 상의 가상 데이터를 의미합니다.\n
⑥	‘게시물’이라 함은 회원이 컨텐츠서비스를 이용함에 있어 컨텐츠서비스 상에 게시한 부호, 문자, 음성, 음향, 화상, 동영상 등의 정보 형태의 글, 사진, 동영상 및 각종파일과 링크 등을 의미합니다.\n
\n
제3조	(약관의 적용 및 변경)\n
①	회사는 본 약관의 내용을 회원이 쉽게 알 수 있도록 컨텐츠서비스 초기화면에 게시하는 방식으로 회원에게 공지합니다.\n
②	회사는 필요한 경우 「전자상거래 등에서의 소비자보호에 관한 법률」, 「약관의 규제에 관한 법률」, 「컨텐츠산업진흥에 관한 법률」, 「정보통신망이용촉진 및 정보보호 등에 관한 법률」, 「콘텐츠산업진흥법」 등 관계 법령에 위배하지 않는 범위 내에서 본 약관을 개정할 수 있습니다.\n
③	회사가 약관을 변경할 경우, 변경된 약관의 내용과 적용일자를 명시하여 그 적용일부터 7일전까지 제1항의 방식에 따라 공지합니다. 다만, 회원에게 불리한 약관의 개정인 경우에는 적용일로부터 30일 전까지 동일한 방식으로 공지합니다.\n
④	본 약관에 동의하는 것은 정기적으로 회사의 홈페이지를 방문하여 약관의 변경사항을 확인하는 것에 동의함을 의미합니다. 변경된 약관에 대한 정보를 알지 못하여 발생하는 회원의 피해에 대해서 회사는 책임지지 않습니다.\n
⑤	회원이 개정된 약관의 적용에 대하여 동의하지 않는 경우, 변경된 약관의 적용을 거부할 수 있습니다. 본 약관의 변경에 대해 이의가 있는 회원은 서비스 이용을 중단하고 이용계약을 해지(회원탈퇴) 할 수 있습니다.\n
⑥	변경된 약관의 적용일 이후에도 컨텐츠서비스를 계속해서 이용하는 경우, 회사는 변경된 약관에 동의한 것으로 간주합니다.\n
\n
제4조	(약관 외 준칙)\n
①	회사는 운영정책 등을 통하여 본 약관의 구체적인 내용을 정할 수 있으며, 이 경우 운영정책 등은 본 약관에 대한 보충적인 효력을 갖습니다.\n
②	본 약관에서 정하지 아니한 사항과 해석에 관하여는 관계법령 또는 상관례에 따릅니다.\n
\n
제5조	(이용계약의 승낙과 제한)\n
①	서비스 이용계약은 회원이 되고자 하는 자가 본 약관을 읽고 그 내용에 동의한 후 회사가 지정하는 양식과 절차에 따라 신청을 하면, 회사가 그러한 신청에 대하여 이용을 승낙함으로써 성립합니다.\n
②	회원이 되고자 하는 자는 반드시 본인의 진정한 정보로써 이용신청을 하여야 하며, 이를 위반한 경우 회사는 이용신청을 거절하거나 컨텐츠서비스 이용에 제한을 둘 수 있습니다.\n
③	회사는 업무상 또는 기술 상의 문제가 없는 경우, 컨텐츠서비스 이용신청을 승낙함을 원칙으로 합니다. 단, 회사는 회사의 설비에 여유가 없거나 기술 상 장애가 발생한 경우, 해당 원인이 해소될 때까지 승낙을 유보할 수 있습니다.\n
\n
제6조	(계정 및 비밀번호)\n
①	회원은 자신의 계정과 비밀번호가 노출되지 않도록 최선의 주의를 다하여야 합니다. 회원의 과실로 계정과 비밀번호가 노출되어 발생되는 피해 및 결과에 대한 책임은 회원 자신에게 있습니다.\n
②	만약 회원 본인의 계정 및 비밀번호를 도난 당하거나 제3자가 사용하고 있음을 알게 된 때에는 즉시 회사에 통보하고 회사의 안내가 있는 경우 그에 따라야 합니다.\n
③	회원은 계정정보보호 등을 위하여 정기적으로 비밀번호를 변경하여야 합니다.\n
\n
제7조	(정보의 제공 및 변경)\n
①	회원은 회원가입 시 진실된 정보를 제공하여야 하며, 허위정보 제공 등으로 인하여 발생한 불이익에 대해서는 보호받을 수 없습니다.\n
②	회원은 자신이 제공한 개인정보를 수정할 수 있습니다. 다만, 일부 정보의 경우 수정이 불가능 할 수 있습니다.\n
③	회원은 회사에 제공한 정보가 변경되었을 경우, 지체없이 컨텐츠서비스 내 관리페이지나 회사 홈페이지 등을 통하여 변경된 정보로 수정하여야 합니다.\n
④	변경된 사항을 회사에 알리지 않아 발생한 불이익에 대하여 회사는 책임을 지지 않습니다.\n
\n
제8조	(개인정보의 보호 및 관리)\n
①	회사는 관계 법령이 정하는 바에 따라 계정정보를 포함한 회원의 개인정보를 보호하기 위해 노력합니다. 회원 개인정보의 보호 및 사용에 대해서는 관계 법령 및 회사가 별도로 고지하는 개인정보 취급방침이 적용됩니다.\n
②	회사의 컨텐츠서비스 또는 홈페이지 등에서 단순히 링크된 제3자 제공의 서비스에 대하여는.회사의 개인정보취급방침이 적용되지 않습니다.\n
③	회사는 회원의 귀책사유로 인하여 노출된 회원의 계정정보를 포함한 모든 정보에 대해서 일체의 책임을 지지 않습니다.\n
\n
제9조	(회사의 의무)\n
①	회사는 관계 법령 및 본 약관에서 금지하거나 미풍양속에 반하는 행위를 하지 않으며, 계속적이고 안정적인 서비스를 제공하기 위하여 노력합니다.\n
②	만약 설비에 장애가 생기거나 데이터 등이 멸실된 때에는 부득이한 사유가 없는 한 지체 없이 이를 수리 또는 복구하도록 최선의 노력을 다합니다.\n
③	회사는 회원의 개인정보보호를 위해 보안시스템을 구축하며 개인정보 취급방침을 공개하고 준수합니다.\n
\n
제10조	(회원의 의무)\n
①	회원은 다음 행위를 하여서는 안됩니다.\n
1.	회원가입 신청 또는 변경 시 허위 내용을 등록한 경우\n
2.	회사의 운영진, 직원 또는 관계자를 사칭하는 경우\n
3.	다른 회원의 정보가 도용되거나 비정상적으로 사용된 것으로 회사가 판단 또는 의심하는 경우\n
4.	타인의 컨텐츠서비스 이용을 방해하는 경우\n
5.	회사의 정상적인 컨텐츠서비스의 제공을 고의로 방해한 경우\n
6.	컨텐츠의 기술적 보호조치를 무력화하거나 정상적인 운영을 방해할 목적으로 회사가 제공 또는 승인하지 아니한 컴퓨터 프로그램이나 기기 또는 장치를 이용하는 경우\n
7.	컨텐츠 내 버그를 악용하거나 비정상적인 방법으로 캐쉬, 컨텐츠머니, 아이템 등을 취득하는 경우\n
8.	회사의 사전승낙 없이 컨텐츠서비스를 이용한 영업활동을 하는 경우\n
9.	회원계정을 타인과 거래하거나 계정 내 캐쉬, 컨텐츠머니, 아이템 등을 타인과 매매하는 경우\n
10.	회사 또는 제3자의 저작권 등 기타 지식재산권을 침해하는 내용을 전송, 게시, 전자우편 또는 기타의 방법으로 타인에게 유포하는 경우\n
11.	컨텐츠서비스를 통하여 얻은 정보를 회사의 사전승낙 없이 컨텐츠서비스 이용 외의 목적으로 복제하거나 이를 출판 및 방송 등에 사용하거나 제3자에게 제공하는 경우\n
12.	다른 회원을 희롱, 위협하거나 특정 이용자에게 지속적으로 고통, 불편을 주는 행위를 하는 경우\n
13.	모욕적이거나 개인신상에 대한 내용이어서 타인의 명예나 프라이버시를 침해할 수 있는 내용을 전송, 게시, 전자우편 또는 기타의 방법으로 타인에게 유포하는 경우\n
14.	공공질서 및 미풍양속에 위반되는 음란한 내용의 정보, 문장, 도형, 음향, 동영상을 전송, 게시, 전자우편 또는 기타의 방법으로 타인에게 유포하는 경우\n
15.	범죄와 관련이 있다고 객관적으로 판단되는 경우\n
16.	기타 관계 법령에 위반하는 행위를 하는 경우\n
②	회원은 본 약관, 운영정책, 공지사항 등을 확인하고 준수하여야 합니다.\n
\n
제11조	(서비스의 제공 및 중단)\n
①	회사는 특별한 사정이 없는 한 연중무휴 1일 24시간 서비스 제공을 원칙으로 합니다.\n
②	제1항에도 불구하고 다음 각 호에 해당하는 경우 회사는 컨텐츠서비스를 중단할 수 있습니다.\n
1.	컴퓨터 등 정보통신설비의 보수점검, 교체, 정기점검 또는 컨텐츠 내용이나 컨텐츠서비스의 수정을 위하여 필요한 경우\n
2.	해킹 등의 전자적 침해사고, 통신사고, 회원들의 비정상적인 컨텐츠 이용행태, 미처 예상하지 못한 컨텐츠서비스의 불안정성에 대응하기 위하여 필요한 경우\n
3.	관련 법령에서 특정 시간 또는 방법으로 컨텐츠서비스 제공을 금지하는 경우\n
4.	천재지변, 비상사태, 정전, 서비스 설비의 장애 또는 서비스 이용의 폭주 등으로 정상적인 컨텐츠서비스 제공이 불가능할 경우\n
5.	회사의 분할, 합병, 영업양도, 영업의 폐지, 당해 컨텐츠서비스의 수익 악화 등 회사의 경영상 중대한 필요에 의한 경우\n
③	회사가 기술 상 또는 경영 상의 사유로 컨텐츠서비스를 영구적으로 종료하는 경우, 컨텐츠서비스 종료에 관한 사실을 30일 전부터 홈페이지에 공지한 후 종료합니다.\n
④	컨텐츠서비스가 종료되는 경우 회원은 무료 컨텐츠서비스 및 사용기간이 남아 있지 않은 유료서비스 등에 대하여 손해배상을 청구할 수 없습니다. 사용기간이 영구이거나 표시되지 않은 유료서비스의 경우 서비스 종료일까지를 사용기간으로 봅니다.\n
⑤	컨텐츠서비스의 일시적 중단 또는 종료 시 회사는 홈페이지를 통하여 사전에 통지합니다. 단, 특별한 사정이 있는 경우 사후에 통지할 수 있습니다.\n
\n
제12조	(유료서비스)\n
①	회사가 제공하는 컨텐츠서비스의 일부 또는 전부는 회사의 정책에 따라 유료로 제공될 수 있습니다.\n
②	유료서비스를 이용하고자 하는 경우, 회원은 유료서비스 이용에 대한 대가를 회사가 정한 방법에 따라 성실히 납부하여야 합니다.\n
\n
제13조	(포인트서비스)\n
①	회사는 이벤트 등의 사유로 회원에게 포인트를 제공할 수 있습니다.\n
②	무료로 지급되는 포인트의 유효기간은 지급 시 명시한 기간에 따르며, 명시되지 않은 포인트의 경우 유효기간은 1년 입니다. 유효기간 내에 사용되지 않은 포인트는 환불되지 않습니다.\n
③	‘회사는 경영 상, 기술 상 이유로 포인트 서비스를 종료할 수 있으며, 종료 30일 전에 홈페이지에 공지한 후 서비스를 종료합니다. 서비스 종료일까지 사용되지 않은 포인트는 자동 소멸됩니다.\n
④	회원이 탈퇴를 하거나 회사가 계정을 삭제하는 경우, 사용되지 않은 포인트도 함께 삭제됩니다.\n
\n
제14조	(게시물의 관리)\n
①	회사는 회원이 게시하거나 등록하는 컨텐츠서비스 내의 게시물 또는 게시 내용에 대해 제 10조에서 규정하는 금지행위에 해당된다고 판단되는 경우, 사전통지 없이 이를 삭제하거나 이동 또는 등록을 거부할 수 있습니다.\n
②	회사가 운영하는 게시판 등에 게시된 정보로 인하여 법률 상 이익이 침해된 회원은 회사에게 당해 정보의 삭제 또는 반박내용의 게재를 요청할 수 있습니다. 이 경우 회사는 신속하게 필요한 조치를 취하고, 이를 신청인에게 통지합니다.\n
\n
제15조	(게시물에 대한 저작권)\n
①	회원 컨텐츠서비스 내에 게시한 게시물은 검색결과, 정보성 이메일, 서비스 및 회사가 운영하는 다른 서비스, 프로모션 등에 노출될 수 있으며, 해당 노출을 위해 필요한 범위 내에서는 일부 수정, 복제, 편집되어 게시될 수 있습니다. 이 경우 회사는 저작권법의 내용을 준수하며, 회원은 언제든지 고객센터 또는 컨텐츠서비스 내 관리기능을 통해 해당 게시물에 대해 삭제, 검색 결과 제외, 비공개 등의 조치를 취할 수 있습니다.\n
②	회원은 컨텐츠서비스를 이용함으로써 얻은 회사의 게시물을 포함한 저작물을 회사의 사전 서면 승낙 없이 임의가공, 복제, 공중송신(전송, 방송 포함), 출판, 배포, 발행 기타 방법에 의하여 이용하거나 공중에 배포, 유포하여서는 안됩니다.\n
③	회원의 게시물이 제3자의 저작권 등 지적재산권을 침해함으로써 발생하는 민·형사상의 책임은 전적으로 회원 자신이 부담하여야 합니다.\n
④	회사는 제1항 이외의 방법으로 회원의 게시물을 이용하는 경우 저작권법에 따라 저작물의 이용허락을 받아야 합니다.\n
⑤	제1항은 회사가 서비스를 운영하는 동안 유효하며 이용자의 탈퇴 후에도 지속적으로 적용됩니다.\n
\n
제16조	(정보의 제공 및 광고의 게재)\n
①	회사는 회원이 필요하다고 인정되는 다양한 정보를 공지사항 또는 배너를 통하여 게시하거나 수신에 동의한 회원에 한하여 전자우편이나 문자메시지 발송 등의 방법으로 제공할 수 있습니다.\n
②	회사는 컨텐츠서비스 내에 회사 또는 제3자의 상품, 서비스, 용역 등에 대한 광고를 노출할 수 있으며, 회원은 이에 동의합니다.\n
③	제2항의 광고에 회원이 참여하거나 거래를 함으로써 발생하는 손실과 손해에 대해서, 회사는 어떠한 책임도 부담하지 않습니다.\n
\n
제17조	(정보의 수집)\n
회사는 채팅내용 등 컨텐츠서비스 내에서 이루어지는 통신내용을 저장 및 보관할 수 있습니다. 본 정보는 회사만이 보유하고 적법한 제3자 외에는 제공받거나 열람할 수 없습니다. 회사는 약관·법령 위반행위 조사, 회원간의 분쟁조정, 민원처리 또는 기타 컨텐츠서비스 내 질서유지를 위하여 필요한 경우에 한해 본 정보를 활용하며, 자료 활용 시에는 활용내용에 대해 회원에게 통지합니다.\n
\n
제18조	(청약의 철회)\n
①	유료서비스는 청약철회가 가능한 것과 제한되는 것으로 구분되며, 이러한 내용은 회원이 유료서비스 구매 시 쉽게 알 수 있는 방법으로 고지합니다.\n
②	청약철회가 가능한 유료서비스의 경우 회원은 구매일로부터 7일 이내에 청약철회를 할 수 있습니다.\n
③	다음 각 호의 경우에는 청약철회가 제한됩니다.\n
1.	단품형 아이템의 경우\n
2.	구매 후 즉시 사용이 시작되거나 컨텐츠에 즉시 적용되는 아이템의 경우\n
3.	컨텐츠서비스의 이용과정에서 획득한 아이템의 경우\n
4.	부가혜택이 제공되는 아이템에서 해당 부가혜택이 사용된 경우\n
5.	묶음형으로 판매된 아이템의 일부가 사용된 경우\n
6.	개봉행위를 사용으로 볼 수 있거나 개봉 시 효용이 결정되는 캡슐형/확률형 아이템의 경우\n
④	만약 유료서비스의 내용이 표시·광고 내용과 다르거나 계약내용과 다르게 이행된 경우에는 구매일 또는 유료서비스 이용가능일로부터 3월 이내, 그 사실을 안 날 또는 알 수 있었던 날부터 30일 이내에 청약철회를 할 수 있습니다.\n
⑤	미성년자가 법정대리인의 동의 없이 유료서비스를 구매한 경우, 미성년자 또는 법정대리인은 결제를 취소할 수 있습니다. 단, 미성년자가 사술 등을 사용하여 성년자로 믿게 한 경우 등에는 취소가 제한될 수 있으며, 유료서비스 구매자가 미성년자인지 아닌지 여부는 유료서비스 결제가 진행된 단말기 등 결제수단의 명의자를 기준으로 판단합니다.\n
⑥	회원은 전화 또는 서면(전자문서 포함), 전자우편 등의 방법으로 청약철회를 할 수 있습니다.\n
\n
제19조	(청약철회의 효과)\n
①	회원이 청약철회를 한 경우 회사는 지체 없이 회원의 유료서비스를 회수 또는 삭제하고, 환급에 필요한 서류 등을 접수한 날로부터 3영업일 이내에 오픈마켓사업자에 대한 결제취소요청 등 환급에 필요한 절차를 개시합니다.\n
②	회사는 결제대금을 환급함에 있어 회원이 신용카드나 그 밖에 전자상거래 등에서의 소비자보호에 관한 법률 시행령으로 정하는 결제수단으로 대금을 지급한 때에는 지체 없이 당해 결제수단을 제공한 사업자로 하여금 결제대금의 청구를 정지 또는 취소하도록 요청합니다. 다만 회사가 결제업자로부터 이미 대금을 지급받은 때에는 이를 결제업자에게 환급하고 이를 소비자에게 통지합니다.\n
③	회사는 아이템 등이 일부 사용되거나 소비된 경우에는 회원이 얻은 이익 또는 해당 아이템 등의 공급에 든 비용에 상당하는 금액을 회원에게 청구할 수 있습니다.\n
④	회사는 필요한 경우 회원에게 환급에 필요한 서류를 요구할 수 있으며, 회원이 이를 거부할 경우에는 환급이 제한될 수 있습니다.\n
\n
제20조	(환불)\n
①	청약철회의 원인이 회원의 변심 등 회원의 귀책사유로 인한 경우에는 제19조 제3항의 이익과 함께 결제대행수수료 등 기타 제반 비용으로 환불금액의 10%를 환불수수료로 공제하고 환불합니다.\n
②	선물하기 기능을 통하여 이루어진 결제에 대하여는 구매한 아이템에 하자가 있는 경우를 제외하고는 원칙적으로 환급이 불가하며, 아이템의 하자로 인한 환급은 선물을 보낸 이용자에 한하여 가능합니다.\n
③	현행법령 및 중대한 약관 위반 등 회원의 귀책사유로 이용계약을 해지하는 경우 환불이 제한될 수 있습니다.\n
\n
제21조	(계약의 해제 및 해지)\n
①	회원은 회원의 사정으로 컨텐츠서비스 이용계약을 해지할 수 있습니다.\n
②	회원이 이용계약을 해지하기를 원하는 경우에는 회사가 정하는 소정의 절차에 따라 회원탈퇴 신청을 하여야 합니다.\n
③	회원이 본 약관에서 정한 회원의 의무를 위반한 경우 회사는 회원에 대한 사전 통지 후 계약을 해지하거나 일정기간 동안 컨텐츠서비스 이용을 제한할 수 있습니다. 다만, 회원이 현행법 위반 및 고의 또는 중대한 과실로 회사에 손해를 입힌 경우에는 사전 통보 없이 이용계약을 해지할 수 있습니다.\n
④	회원이 제3항을 위반하여 받을 수 있는 제한조치의 구체적인 내용은 운영정책 등 회사의 정책에 따라 정해지며 회사 홈페이지를 통하여 확인하실 수 있습니다.\n
⑤	제3항 단서에 따라 이용계약이 해지되는 경우, 회원은 유료서비스의 사용권한을 상실하고 이로 인한 환불 및 손해배상을 청구할 수 없습니다.\n
⑥	회사가 이용계약을 해지하는 경우 회사는 회원에게 전자우편이나 문자메시지 발송 등의 방법으로 회원에게 통보합니다.\n
\n
제22조	(이의신청)\n
회사는 회원이 제기하는 불만이나 이의가 정당하다고 판단할 때에는 합리적인 기간 내에 이를 신속하게 처리합니다. 다만, 처리에 장기간이 소요되는 경우에는 회원에게 장기간이 소요되는 사유와 처리일정을 회사 홈페이지에 공지하거나 전자우편, 전화 또는 서면 등으로 통보합니다.\n
\n
제23조	(손해배상)\n
①	회사는 회사가 제공하는 컨텐츠서비스와 관련하여 회원에게 발생한 손해에 대해서 어떠한 책임도 지지 않습니다. 다만, 회사의 고의 또는 중대한 과실로 인하여 발생한 손해의 경우는 제외합니다.\n
②	회원이 본 약관을 위반하여 회사에 손해를 끼친 경우, 회원은 회사에 대하여 그 손해에 대하여 배상할 책임이 있습니다.\n
\n
제24조	(회사의 면책)\n
①	회사는 전시, 사변, 천재지변, 비상사태, 현재의 기술로는 해결이 불가능한 기술적 결함 기타 불가항력적 사유로 서비스를 제공할 수 없는 경우에는 책임이 면제됩니다.\n
②	회사는 회원의 귀책사유로 인한 컨텐츠서비스의 중지, 이용장애 및 계약해지에 대하여 책임이 면제됩니다.\n
③	회사는 기간통신 사업자가 전기통신서비스를 중지하거나 정상적으로 제공하지 아니하여 회원에게 손해가 발생한 경우에 대해서 회사의 고의 또는 중대한 과실이 없는 한 책임이 면제됩니다.\n
④	회사는 사전에 공지된 컨텐츠서비스용 설비의 보수, 교체, 정기점검, 공사 등 부득이한 사유로 컨텐츠서비스가 중지되거나 장애가 발생한 경우에 대해서 회사의 고의 또는 중대한 과실이 없는 한 책임이 면제됩니다.\n
⑤	회사는 회원의 모바일 네트워크 또는 모바일 디바이스 환경으로 인하여 발생하는 제반 문제 또는 회사의 고의 또는 중대한 과실이 없는 네트워크 환경으로 인하여 발생하는 문제에 대해서 책임이 면제됩니다.\n
⑥	회사는 회원 또는 제3자가 컨텐츠서비스 내 또는 회사 홈페이지 상에 게시 또는 전송한 정보, 자료, 사실의 신뢰도, 정확성 등의 내용에 대해서는 회사의 고의 또는 중대한 과실이 없는 한 책임이 면제됩니다.\n
⑦	회사는 회원 상호간 또는 회원과 제3자간에 컨텐츠서비스를 매개로 발생한 분쟁에 대해 개입할 의무가 없으며 이로 인한 손해를 배상할 책임도 없습니다.\n
⑧	회사가 제공하는 컨텐츠서비스 중 무료서비스의 경우에는 회사의 고의 또는 중대한 과실이 없는 한 회사는 손해배상을 하지 않습니다.\n
⑨	본 컨텐츠서비스 중 일부의 컨텐츠서비스는 다른 사업자가 제공하는 컨텐츠서비스를 통하여 제공될 수 있으며, 회사는 다른 사업자가 제공하는 컨텐츠서비스로 인하여 발생한 손해 등에 대해서는 회사의 고의 또는 중대한 과실이 없는 한 책임이 면제됩니다.\n
⑩	회사는 회원이 컨텐츠서비스를 이용하며 기대하는 캐릭터, 경험치, 아이템 등의 결과를 얻지 못하거나 상실한 것에 대하여 책임을 지지 않으며, 컨텐츠서비스에 대한 취사선택 또는 이용으로 발생하는 손해 등에 대해서 회사의 고의 또는 중대한 과실이 없는 한 책임이 면제됩니다.\n
⑪	회사는 회원의 컨텐츠상 사이버 자산(컨텐츠머니), 등급/내공 손실에 대하여 회사의 고의 또는 중대한 과실이 없는 한 책임이 면제됩니다.\n
⑫	회사는 회원의 모바일 디바이스 오류에 의한 손해가 발생한 경우 또는 신상정보 및 전자우편주소를 부정확하게 기재하거나 미기재하여 손해가 발생한 경우에 대하여 회사의 고의 또는 중대한 과실이 없는 한 책임이 면제됩니다.\n
⑬	회사는 관련 법령, 정부 정책 등에 따라 컨텐츠서비스 또는 회원에 따라 컨텐츠서비스 이용시간 등을 제한할 수 있으며, 이러한 제한사항 및 제한에 따라 발생하는 컨텐츠서비스 이용 관련 제반사항에 대해서는 책임이 면제됩니다.\n
\n
제25조	(재판권 및 준거법)\n
본 약관은 대한민국 법률에 따라 규율되고 해석되며, 회사와 회원간에 발생한 분쟁으로 소송이 제기되는 경우, 법령에 정한 절차에 따른 법원을 관할 법원으로 합니다.\n
\n
부칙.  본 이용 약관은 2016년 9월 1일부터 효력을 갖습니다.\n
</string>
</resources>