<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.itsnowball.educraftadmin.LoginActivity"
    android:background="@color/colorPrimary">

    <ImageView
        android:layout_width="130dp"
        app:srcCompat="@drawable/logo"
        android:layout_marginTop="50dp"
        android:id="@+id/imageView2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"
        android:layout_height="110dp" />

    <TextView
        android:text="EDUCRAFT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView2"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:textSize="30dp" />

    <TextView
        android:text="@string/login_email_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textSize="14dp"
        android:textColor="@color/colorWhite"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:paddingLeft="5dp" />

    <Button
        android:text="@string/login_button_text"
        android:layout_width="match_parent"
        android:id="@+id/login_button"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/login_button_bg"
        android:layout_height="40dp"
        android:textColor="@color/colorWhite"
        android:textSize="14dp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/et_password"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:id="@+id/et_email"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/edittext_borderwhite"
        android:textColor="@color/colorPrimaryDark"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:hint="@string/login_email_hint"
        android:layout_marginTop="5dp"
        android:textColorHint="#FF999999"
        android:paddingRight="10dp"
        android:textSize="14dp" />

    <TextView
        android:text="@string/login_password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:textSize="14dp"
        android:textColor="@color/colorWhite"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="5dp"
        android:layout_below="@+id/et_email" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/et_password"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/edittext_borderwhite"
        android:textColor="@color/colorPrimaryDark"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:hint="@string/login_password_hint"
        android:textColorHint="#FF999999"
        android:paddingRight="10dp"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="5dp"
        android:password="true"
        android:textSize="14dp" />

    <TextView
        android:text="EDUCRAFT 계정 생성하기"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textColor="@drawable/signup_text_bg"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="14dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp" />

</RelativeLayout>
